--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -189,27 +189,29 @@ dtb-$(CONFIG_ARCH_MSM8996) += msm8996-v2-pmi8994-cdp.dtb \
 	apq8096-v3-pmi8996-mdm9x55-slimbus-mtp.dtb \
 	apq8096-v3-pmi8996-dragonboard.dtb
 
-dtb-$(CONFIG_ARCH_MSMCOBALT) += msmcobalt-sim.dtb \
-	msmcobalt-rumi.dtb \
-	msmcobalt-cdp.dtb \
-	msmcobalt-mtp.dtb \
-	msmcobalt-v2-sim.dtb \
-	msmcobalt-v2-rumi.dtb \
-	msmcobalt-v2-mtp.dtb \
-	msmcobalt-v2-cdp.dtb
+dtb-$(CONFIG_MSM_GVM_QUIN) += vplatform-lfv-msm8996.dtb
 
-dtb-$(CONFIG_ARCH_MDM9640) += mdm9640-sim.dtb \
-	mdm9640-rumi.dtb \
-	mdm9640-emmc-cdp.dtb \
-	mdm9640-nand-cdp.dtb \
-	mdm9640-mtp.dtb
-
-dtb-$(CONFIG_ARCH_MDMCALIFORNIUM) += mdmcalifornium-sim.dtb \
-	mdmcalifornium-rumi.dtb \
-	mdmcalifornium-emmc-cdp.dtb \
-	mdmcalifornium-nand-cdp.dtb \
-	mdmcalifornium-emmc-mtp.dtb \
-	mdmcalifornium-nand-mtp.dtb
+ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
+dtbo-$(CONFIG_ARCH_MSM8998) += \
+	msm8998-cdp-overlay.dtbo \
+	msm8998-mtp-overlay.dtbo \
+	msm8998-v2-cdp-overlay.dtbo \
+	msm8998-v2-mtp-overlay.dtbo \
+	msm8998-v2.1-cdp-overlay.dtbo \
+	msm8998-v2.1-mtp-overlay.dtbo \
+	msm8998-qrd-overlay.dtbo \
+	msm8998-qrd-vr1-overlay.dtbo \
+	msm8998-qrd-skuk-overlay.dtbo
+msm8998-cdp-overlay.dtbo-base :=  msm8998.dtb
+msm8998-mtp-overlay.dtbo-base :=  msm8998.dtb
+msm8998-v2-cdp-overlay.dtbo-base :=  msm8998-v2.dtb
+msm8998-v2-mtp-overlay.dtbo-base :=  msm8998-v2.dtb
+msm8998-v2.1-cdp-overlay.dtbo-base :=  msm8998-v2.1.dtb
+msm8998-v2.1-mtp-overlay.dtbo-base :=  msm8998-v2.1.dtb
+msm8998-qrd-overlay.dtbo-base :=  msm8998-qrd.dtb
+msm8998-qrd-vr1-overlay.dtbo-base :=  msm8998-qrd-vr1.dtb
+msm8998-qrd-skuk-overlay.dtbo-base :=  msm8998-qrd-skuk.dtb
+endif
 
 dtb-$(CONFIG_ARCH_MSM8937) += msm8937-rumi.dtb \
 	msm8937-pmi8950-cdp.dtb \
@@ -227,31 +229,6 @@ dtb-$(CONFIG_ARCH_MSM8937) += msm8937-rumi.dtb \
 	apq8037-pmi8937-cdp.dtb \
 	apq8037-pmi8950-mtp.dtb \
 	apq8037-pmi8937-mtp.dtb
-
-dtb-$(CONFIG_ARCH_MSM8917) += msm8917-rumi.dtb \
-	apq8917-pmi8937-cdp.dtb \
-	apq8917-pmi8937-mtp.dtb \
-	apq8917-pmi8950-cdp.dtb \
-	apq8917-pmi8950-mtp.dtb \
-	msm8917-pmi8937-cdp.dtb \
-	msm8917-pmi8937-mtp.dtb \
-	msm8917-pmi8950-cdp.dtb \
-	msm8917-pmi8950-cdp-mirror-lake-touch.dtb \
-	msm8917-pmi8950-ext-codec-cdp.dtb \
-	msm8917-pmi8950-mtp.dtb \
-	msm8917-pmi8937-rcm.dtb \
-	msm8917-pmi8950-rcm.dtb \
-	msm8917-qgp-tmo.dtb \
-	msm8917-pmi8937-qrd-sku5.dtb
-
-dtb-$(CONFIG_ARCH_MSM8920) += msm8920-pmi8937-cdp.dtb \
-	msm8920-pmi8937-mtp.dtb \
-	msm8920-pmi8950-cdp.dtb \
-	msm8920-pmi8950-mtp.dtb \
-	msm8920-pmi8937-rcm.dtb \
-	msm8920-pmi8950-rcm.dtb \
-	msm8920-pmi8940-qrd-sku7.dtb \
-	msm8920-pmi8950-ext-codec-cdp.dtb
 
 dtb-$(CONFIG_ARCH_MSM8937) += msm8937-rumi.dtb \
 	msm8937-pmi8950-cdp.dtb \
@@ -332,24 +309,86 @@ dtb-$(CONFIG_ARCH_MSM8937) += msm8937-cedric-p1.dtb \
 	msm8937-cedric-p5.dtb
 endif
 
-dtb-$(CONFIG_ARCH_MDM9607) += mdm9607-rumi.dtb \
-	mdm9607-cdp.dtb \
-	mdm9607-mtp.dtb \
-	mdm9607-rcm.dtb \
-	mdm9607-mtp-sdcard.dtb
+dtb-$(CONFIG_ARCH_MSMHAMSTER) += msmhamster-rumi.dtb
 
-dtb-$(CONFIG_ARCH_MSM8916) += msm8952-qrd-skum.dtb \
-       msm8952-cdp.dtb \
-       msm8952-ext-codec-cdp.dtb \
-       msm8952-mtp.dtb
-
-dtb-$(CONFIG_ARCH_MSM8909) += msm8909-pm8916-mtp.dtb \
-	msm8909w-wtp.dtb \
-	apq8009w-wtp.dtb \
-	apq8009w-cdp.dtb \
-	msm8909w-pm8916-mtp-ext-chg-fg.dtb \
-	msm8909-pm8916-cdp.dtb \
-	msm8909w-cdp.dtb
+dtb-$(CONFIG_ARCH_SDM660) += sdm660-sim.dtb \
+	sdm660-internal-codec-cdp.dtb \
+	sdm660-internal-codec-mtp.dtb \
+	sdm660-internal-codec-rcm.dtb \
+	sdm660-cdp.dtb \
+	sdm660-mtp.dtb \
+	sdm660-qrd.dtb \
+	sdm660-rcm.dtb \
+	sdm660-rumi.dtb \
+	sdm660-pm660a-cdp.dtb \
+	sdm660-pm660a-mtp.dtb \
+	sdm660-pm660a-qrd.dtb \
+	sdm660-pm660a-rcm.dtb \
+	sdm660-pm660a-rumi.dtb \
+	sdm660-internal-codec-pm660a-cdp.dtb \
+	sdm660-internal-codec-pm660a-mtp.dtb \
+	sdm660-internal-codec-pm660a-rcm.dtb \
+	sdm660-pm660a-sim.dtb \
+	sda660-cdp.dtb \
+	sda660-mtp.dtb \
+	sda660-rcm.dtb \
+	sda660-pm660a-cdp.dtb \
+	sda660-pm660a-mtp.dtb \
+	sda660-pm660a-rcm.dtb \
+	sda660-pm660a-qrd-hdk.dtb \
+	sdm660-headset-jacktype-no-cdp.dtb \
+	sdm660-headset-jacktype-no-rcm.dtb \
+	sdm660-pm660a-headset-jacktype-no-cdp.dtb \
+	sdm660-pm660a-headset-jacktype-no-rcm.dtb \
+	sdm660-usbc-audio-mtp.dtb \
+	sdm660-usbc-audio-rcm.dtb \
+	sdm658-mtp.dtb \
+	sdm658-cdp.dtb \
+	sdm658-rcm.dtb \
+	sdm658-qrd.dtb \
+	sdm658-pm660a-mtp.dtb \
+	sdm658-pm660a-cdp.dtb \
+	sdm658-pm660a-rcm.dtb \
+	sdm658-pm660a-qrd.dtb \
+	sdm658-internal-codec-mtp.dtb \
+	sdm658-internal-codec-cdp.dtb \
+	sdm658-internal-codec-rcm.dtb \
+	sdm658-internal-codec-pm660a-mtp.dtb \
+	sdm658-internal-codec-pm660a-cdp.dtb \
+	sdm658-internal-codec-pm660a-rcm.dtb \
+	sda658-cdp.dtb \
+	sda658-mtp.dtb \
+	sda658-rcm.dtb \
+	sda658-pm660a-mtp.dtb \
+	sda658-pm660a-cdp.dtb \
+	sda658-pm660a-rcm.dtb \
+	sdm636-cdp.dtb \
+	sdm636-mtp.dtb \
+	sdm636-qrd.dtb \
+	sdm636-rcm.dtb \
+	sdm636-headset-jacktype-no-cdp.dtb \
+	sdm636-headset-jacktype-no-rcm.dtb \
+	sdm636-internal-codec-cdp.dtb \
+	sdm636-internal-codec-mtp.dtb \
+	sdm636-internal-codec-pm660a-cdp.dtb \
+	sdm636-internal-codec-pm660a-mtp.dtb \
+	sdm636-internal-codec-pm660a-rcm.dtb \
+	sdm636-internal-codec-rcm.dtb \
+	sdm636-pm660a-headset-jacktype-no-cdp.dtb \
+	sdm636-pm660a-headset-jacktype-no-rcm.dtb \
+	sdm636-pm660a-cdp.dtb \
+	sdm636-pm660a-mtp.dtb \
+	sdm636-pm660a-qrd.dtb \
+	sdm636-pm660a-rcm.dtb \
+	sdm636-usbc-audio-mtp.dtb \
+	sdm636-usbc-audio-rcm.dtb \
+	sda636-cdp.dtb \
+	sda636-mtp.dtb \
+	sda636-rcm.dtb \
+	sda636-pm660a-cdp.dtb \
+	sda636-pm660a-mtp.dtb \
+	sda636-pm660a-qrd-hdk.dtb \
+	sda658-pm660a-rcm.dtb
 
 dtb-$(CONFIG_ARCH_SDM630) += sdm630-rumi.dtb \
 	sdm630-pm660a-rumi.dtb \
