--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -251,6 +251,8 @@ source "init/Kconfig"
 
 source "kernel/Kconfig.freezer"
 
+source "arch/arm64/Kconfig.platforms"
+
 menu "Platform selection"
 
 config ARCH_THUNDER
@@ -299,20 +301,6 @@ config ARCH_MSM
 	select DEVFREQ_GOV_MEMLAT
 	help
 	  This enables support for the ARMv8 based Qualcomm chipsets.
-
-config ARCH_MSM8916
-	bool "Enable Support for Qualcomm MSM8916"
-	depends on ARCH_MSM
-	help
-	  This enables support for the MSM8916 chipset. If you don't
-	  know what to do here, say N
-
-config ARCH_MSM8917
-	bool "Enable Support for Qualcomm Technologies Inc MSM8917"
-	depends on ARCH_MSM
-	help
-	  This enables support for the MSM8917 chipset. If you don't
-	  know what to do here, say N
 
 config ARCH_MSM8937
 	bool "Enable Support for Qualcomm Technologies Inc MSM8937"
