--- a/arch/arm/boot/dts/qcom/msm8937-cedric.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-cedric.dtsi
@@ -178,16 +178,20 @@
 
 &pmi8950_charger {
 	qcom,fastchg-current-ma = <2000>;
-	qcom,chg-thermal-mitigation = <2000>, <1600>, <1200>, <1000>,
+	qcom,max-usbin-current-ma= <3000>;
+	qcom,chg-thermal-mitigation = <3200>,<2800>,<2400>,<2000>, <1600>, <1200>, <1000>,
 				      <700>, <400>;
 	/delete-property/ qcom,dc-thermal-mitigation;
-	qcom,parallel-charge-current-map = <2000 2000 0>,
+	qcom,parallel-charge-current-map = <3200 3200 0>,
+					   <2800 2800 0>,
+					   <2400 2400 0>
+					   <2000 2000 0>,
 					   <1600 1600 0>,
 					   <1200 1200 0>,
 					   <1000 1000 0>,
 					   <700 700 0>,
 					   <400 400 0>;
-	qcom,stepchg-current-ma = <2000>;
+	qcom,stepchg-current-ma = <2400>;
 	qcom,stepchg-taper-ma = <1500>;
 	qcom,stepchg-iterm-ma = <125>;
 };
