--- a/arch/arm64/configs/eva_defconfig
+++ b/arch/arm64/configs/eva_defconfig
@@ -702,3 +702,4 @@ CONFIG_LZ4_DECOMPRESS=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_MMI=y
 CONFIG_MOT_UTAG=y
 CONFIG_MSMB_CAMERA=y
+CONFIG_PSTORE_RAM_ANNOTATION_APPEND=y
