--- a/arch/arm64/configs/eva_defconfig
+++ b/arch/arm64/configs/eva_defconfig
@@ -1,38 +1,5 @@
-CONFIG_EARLY_IOREMAP=y
-CONFIG_LOCALVERSION="-Eva"
+CONFIG_LOCALVERSION="-ProjektEva"
 # CONFIG_USELIB is not set
-CONFIG_ARM64=y
-CONFIG_64BIT=y
-CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
-CONFIG_MMU=y
-CONFIG_ARCH_MMAP_RND_BITS_MIN=18
-CONFIG_ARCH_MMAP_RND_BITS_MAX=24
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
-CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
-CONFIG_STACKTRACE_SUPPORT=y
-CONFIG_LOCKDEP_SUPPORT=y
-CONFIG_TRACE_IRQFLAGS_SUPPORT=y
-CONFIG_RWSEM_XCHGADD_ALGORITHM=y
-CONFIG_GENERIC_BUG=y
-CONFIG_GENERIC_HWEIGHT=y
-CONFIG_GENERIC_CSUM=y
-CONFIG_GENERIC_CALIBRATE_DELAY=y
-CONFIG_ZONE_DMA=y
-CONFIG_HAVE_GENERIC_RCU_GUP=y
-CONFIG_ARCH_DMA_ADDR_T_64BIT=y
-CONFIG_NEED_DMA_MAP_STATE=y
-CONFIG_NEED_SG_DMA_LENGTH=y
-CONFIG_ARM64_DMA_USE_IOMMU=y
-CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=8
-CONFIG_SWIOTLB=y
-CONFIG_IOMMU_HELPER=y
-CONFIG_KERNEL_MODE_NEON=y
-CONFIG_FIX_EARLYCON_MEM=y
-CONFIG_PGTABLE_LEVELS=3
-CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
-CONFIG_IRQ_WORK=y
-CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -57,15 +24,13 @@ CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_RD_BZIP2=y
-CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
-CONFIG_CC_STACKPROTECTOR_REGULAR=y
-CONFIG_ARCH_MMAP_RND_BITS=15
+CONFIG_CC_STACKPROTECTOR_STRONG=y
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
@@ -75,34 +40,30 @@ CONFIG_MODULE_SIG_FORCE=y
 CONFIG_MODULE_SIG_SHA512=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_ARCH_MSM=y
+CONFIG_ARCH_MSM8916=y
+CONFIG_ARCH_MSM8940=y
 CONFIG_ARCH_MSM8953=y
-CONFIG_ARM_KERNMEM_PERMS=y
-CONFIG_SMP=y
+CONFIG_ARCH_SDM450=y
+CONFIG_ARCH_MSM8937=y
+CONFIG_ARCH_MSMCOBALT=y
+CONFIG_PCI_MSM=y
 CONFIG_SCHED_MC=y
-CONFIG_NR_CPUS=8
-CONFIG_ARM_PSCI=y
 CONFIG_PREEMPT=y
-CONFIG_AEABI=y
-CONFIG_HIGHMEM=y
+CONFIG_CLEANCACHE=y
 CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_ZSMALLOC=y
+CONFIG_ZCACHE=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_SECCOMP=y
-# CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE is not set
-CONFIG_AUTO_ZRELADDR=y
-CONFIG_ARM_DECOMPRESSOR_LIMIT=0x3200000
-CONFIG_SCHED_FREQ_INPUT=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_IDLE=y
-CONFIG_VFP=y
-CONFIG_NEON=y
-CONFIG_KERNEL_MODE_NEON=y
+CONFIG_ARMV8_DEPRECATED=y
+CONFIG_SWP_EMULATION=y
+CONFIG_CP15_BARRIER_EMULATION=y
+CONFIG_SETEND_EMULATION=y
+CONFIG_ARM64_SW_TTBR0_PAN=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
+CONFIG_COMPAT=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
@@ -110,6 +71,14 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_RUNTIME=y
 CONFIG_PM_DEBUG=y
 CONFIG_SUSPEND_TIME=y
+CONFIG_CPU_IDLE=y
+CONFIG_CPU_FREQ=y
+CONFIG_SCHED_FREQ_INPUT=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -271,6 +240,7 @@ CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
+CONFIG_USB_EXT_TYPE_C_PERICOM=y
 CONFIG_MSM_ULTRASOUND=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
@@ -313,6 +283,7 @@ CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CNSS_CRYPTO=y
 CONFIG_ATH_CARDS=y
+CONFIG_WIL6210=m
 CONFIG_CLD_LL_CORE=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=m
@@ -347,6 +318,7 @@ CONFIG_SERIAL_MSM_SMD=y
 CONFIG_DIAG_CHAR=y
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
+# CONFIG_DEVPORT is not set
 CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ADSPRPC=y
 CONFIG_MSM_RDBG=m
@@ -360,23 +332,22 @@ CONFIG_SPI_QUP=y
 CONFIG_SPI_SPIDEV=m
 CONFIG_PINCTRL_MSM8952=y
 CONFIG_PINCTRL_MSM8937=y
+CONFIG_PINCTRL_MSMCOBALT=y
 CONFIG_PINCTRL_MSM8940=y
 CONFIG_PINCTRL_MSM8953=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
-CONFIG_POWER_SUPPLY=y
 CONFIG_SMB1351_USB_CHARGER=y
 CONFIG_SMB135X_CHARGER=y
 CONFIG_QPNP_SMBCHARGER=y
 CONFIG_QPNP_FG=y
 CONFIG_BATTERY_BCL=y
-CONFIG_QPNP_LINEAR_CHARGER=y
 CONFIG_QPNP_TYPEC=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
-CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_DLOAD_MODE=y
+CONFIG_MSM_PM=y
 CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
 CONFIG_SENSORS_EPM_ADC=y
@@ -392,7 +363,6 @@ CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_WCD9335_CODEC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
-CONFIG_REGULATOR_PROXY_CONSUMER=y
 CONFIG_REGULATOR_STUB=y
 CONFIG_REGULATOR_FAN53555=y
 CONFIG_REGULATOR_MSM_GFX_LDO=y
@@ -402,7 +372,11 @@ CONFIG_REGULATOR_QPNP=y
 CONFIG_REGULATOR_QPNP_LABIBB=y
 CONFIG_REGULATOR_SPM=y
 CONFIG_REGULATOR_CPR=y
+CONFIG_REGULATOR_CPR3_HMSS=y
+CONFIG_REGULATOR_CPR3_MMSS=y
 CONFIG_REGULATOR_CPR4_APSS=y
+CONFIG_REGULATOR_CPRH_KBSS=y
+CONFIG_REGULATOR_KRYO=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_RADIO_SUPPORT=y
@@ -412,6 +386,7 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_SOC_CAMERA=y
 CONFIG_SOC_CAMERA_PLATFORM=y
 CONFIG_MSM_VIDC_V4L2=y
+CONFIG_MSM_VIDC_VMEM=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_CAMERA=y
 CONFIG_MSMB_CAMERA=y
@@ -461,13 +436,16 @@ CONFIG_HIDRAW=y
 CONFIG_UHID=y
 CONFIG_HID_APPLE=y
 CONFIG_HID_ELECOM=y
+CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 CONFIG_HID_MULTITOUCH=y
+CONFIG_USB_HIDDEV=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_MON=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_MSM=y
+CONFIG_USB_EHCI_MSM_HSIC=y
 CONFIG_USB_ACM=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_STORAGE_DATAFAB=y
@@ -478,7 +456,6 @@ CONFIG_USB_STORAGE_SDDR09=y
 CONFIG_USB_STORAGE_SDDR55=y
 CONFIG_USB_STORAGE_JUMPSHOT=y
 CONFIG_USB_STORAGE_ALAUDA=y
-CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 CONFIG_USB_DWC3=y
@@ -513,6 +490,9 @@ CONFIG_LEDS_TRIGGERS=y
 CONFIG_SWITCH=y
 CONFIG_EDAC=y
 CONFIG_EDAC_MM_EDAC=y
+CONFIG_EDAC_CORTEX_ARM64=y
+CONFIG_EDAC_CORTEX_ARM64_DBE_IRQ_ONLY=y
+CONFIG_EDAC_CORTEX_ARM64_PANIC_ON_UE=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_QPNP=y
 CONFIG_DMADEVICES=y
@@ -557,6 +537,7 @@ CONFIG_MSM_COMMON_LOG=y
 CONFIG_MSM_DDR_HEALTH=y
 CONFIG_MSM_WATCHDOG_V2=y
 CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC=y
+CONFIG_MSM_RPM_SMD=y
 CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
@@ -585,33 +566,27 @@ CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
+CONFIG_ICNSS=y
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_KERNEL_PROTECT=y
 CONFIG_MSM_KERNEL_PROTECT_MPU=y
+CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_SPDM_SCM=y
 CONFIG_DEVFREQ_SPDM=y
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
 CONFIG_ARM_GIC_PANIC_HANDLER=y
-# CONFIG_CORESIGHT is not set
-# CONFIG_CORESIGHT_EVENT is not set
-# CONFIG_CORESIGHT_FUSE is not set
-# CONFIG_CORESIGHT_CTI is not set
-# CONFIG_CORESIGHT_CTI_SAVE_DISABLE is not set
-# CONFIG_CORESIGHT_TMC is not set
-# CONFIG_CORESIGHT_TPIU is not set
-# CONFIG_CORESIGHT_FUNNEL is not set
-# CONFIG_CORESIGHT_REPLICATOR is not set
-# CONFIG_CORESIGHT_STM is not set
-# CONFIG_CORESIGHT_HWEVENT is not set
+CONFIG_ARM_GIC_V3_ACL=y
+CONFIG_CORESIGHT=y
+CONFIG_CORESIGHT_EVENT=y
+CONFIG_CORESIGHT_TMC=y
+CONFIG_CORESIGHT_FUNNEL=y
+CONFIG_CORESIGHT_REPLICATOR=y
+CONFIG_CORESIGHT_STM=y
 CONFIG_SENSORS_SSC=y
 CONFIG_MSM_TZ_LOG=y
-CONFIG_EXT2_FS=y
-CONFIG_EXT2_FS_XATTR=y
-CONFIG_EXT3_FS=y
-# CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_QUOTA=y
@@ -619,13 +594,10 @@ CONFIG_QUOTA_NETLINK_INTERFACE=y
 # CONFIG_PRINT_QUOTA_WARNING is not set
 CONFIG_QFMT_V2=y
 CONFIG_FUSE_FS=y
-CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_SDCARD_FS=y
-CONFIG_ECRYPT_FS=y
-CONFIG_ECRYPT_FS_MESSAGING=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
@@ -641,8 +613,8 @@ CONFIG_TIMER_STATS=y
 CONFIG_IPC_LOGGING=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_DEBUG_SET_MODULE_RONX=y
+CONFIG_DEBUG_RODATA=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
-CONFIG_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
@@ -658,12 +630,30 @@ CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_CRYPTO_DEV_OTA_CRYPTO=y
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
-CONFIG_ARM_CRYPTO=y
-CONFIG_CRYPTO_SHA1_ARM_NEON=y
-CONFIG_CRYPTO_SHA2_ARM_CE=y
-CONFIG_CRYPTO_SHA512_ARM_NEON=y
-CONFIG_CRYPTO_AES_ARM_BS=y
-CONFIG_CRYPTO_AES_ARM_CE=y
+CONFIG_ARM64_CRYPTO=y
+CONFIG_CRYPTO_SHA1_ARM64_CE=y
+CONFIG_CRYPTO_SHA2_ARM64_CE=y
+CONFIG_CRYPTO_GHASH_ARM64_CE=y
+CONFIG_CRYPTO_AES_ARM64_CE=y
+CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
+CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
+CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
+CONFIG_QMI_ENCDEC=y
+#
+# Please avoid changing the Qualcomm defconfig files and use this file to
+# add any Motorola-specific configuration changes that are applicable to
+# userdebug, eng, and user builds.
+#
+# After building, a list of all of the config files that are used can be found
+# at the top of:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/mapphone_defconfig
+#
+# The actual output of the kernel configuration system can be found at:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/.config
+#
+# You can check the .config file to verify that your configuration option is
+# being set as expected.
+#
 
 CONFIG_MMI_DEVICE_DTBS=y
 CONFIG_HAPTIC_DRV2605=y
@@ -810,30 +800,6 @@ CONFIG_DPM_WATCHDOG=y
 CONFIG_PINCTRL_PARANOID=y
 # CONFIG_MMC_PERF_PROFILING is not set
 # CONFIG_RMNET_DATA_DEBUG_PKT is not set
-# cedric configs
-# CONFIG_SENSORS_MOTOSH is not set
-# CONFIG_SENSORS_MOTOSH_HEADSET is not set
-CONFIG_SENSORS_STML0XX=y
-CONFIG_SENSORS_SH_AK09912=y
-# CONFIG_QPNP_SMBCHARGER is not set
-# CONFIG_QPNP_SMBCHARGER_MMI is not set
-CONFIG_QPNP_SMBCHARGER_MMI_LITE=y
-# CONFIG_GPIO_ARIZONA is not set
-# CONFIG_MFD_ARIZONA is not set
-# CONFIG_MFD_ARIZONA_SPI is not set
-# CONFIG_REGULATOR_ARIZONA is not set
-# CONFIG_SND_SOC_ARIZONA_M is not set
-# CONFIG_MFD_MARLEY is not set
-# CONFIG_SND_SOC_MARLEY is not
-# CONFIG_SND_SOC_CS35L34 is not set
-# CONFIG_SND_SOC_OPALUM is not set
-# CONFIG_MODS_CODEC_BUS is not set
-# CONFIG_SND_SOC_MODS_CODEC_SHIM is not set
-CONFIG_SENSORS=y
-CONFIG_INPUT_SX9310=y
-CONFIG_CEDRIC_DTB=y
-CONFIG_SCHED_QHMP=y
-
 # mot8937 configs
 CONFIG_ARCH_MSM8916=y
 CONFIG_ARCH_MSM8917=y
@@ -861,3 +827,26 @@ CONFIG_IP6_NF_MATCH_RPFILTER=y
 CONFIG_BW_MONITOR=y
 CONFIG_SDCARD_FS_PARTIAL_RELATIME=y
 CONFIG_SDCARD_FS_DIR_WRITER=y
+# cedric configs
+# CONFIG_SENSORS_MOTOSH is not set
+# CONFIG_SENSORS_MOTOSH_HEADSET is not set
+CONFIG_SENSORS_STML0XX=y
+CONFIG_SENSORS_SH_AK09912=y
+# CONFIG_QPNP_SMBCHARGER is not set
+# CONFIG_QPNP_SMBCHARGER_MMI is not set
+CONFIG_QPNP_SMBCHARGER_MMI_LITE=y
+# CONFIG_GPIO_ARIZONA is not set
+# CONFIG_MFD_ARIZONA is not set
+# CONFIG_MFD_ARIZONA_SPI is not set
+# CONFIG_REGULATOR_ARIZONA is not set
+# CONFIG_SND_SOC_ARIZONA_M is not set
+# CONFIG_MFD_MARLEY is not set
+# CONFIG_SND_SOC_MARLEY is not
+# CONFIG_SND_SOC_CS35L34 is not set
+# CONFIG_SND_SOC_OPALUM is not set
+# CONFIG_MODS_CODEC_BUS is not set
+# CONFIG_SND_SOC_MODS_CODEC_SHIM is not set
+CONFIG_SENSORS=y
+CONFIG_INPUT_SX9310=y
+CONFIG_CEDRIC_DTB=y
+CONFIG_SCHED_QHMP=y
