--- a/arch/arm/boot/dts/qcom/msm8937-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-moto-common.dtsi
@@ -17,6 +17,8 @@
 #include "carrier-channel-ids.dtsi"
 #include "dsi-panel-mot-dummy-qhd-video.dtsi"
 #include <moto-mem-reserve.h>
+#include "msm8937-camera-sensor-mot.dtsi"
+
 
 / {
 	aliases {
@@ -32,20 +34,6 @@
 			no-map;
 			reg = <0x0 0xae000000 0x0 0x80000>;
 			label = "ramoops_mem";
-		};
-
-		tzlog_bck_mem: tzlog_bck_region {
-			no-map;
-			reg = <0x0 TZLOG_BCK_BASE_8937
-				0x0 TZLOG_BCK_SIZE>;
-			label = "tzlog_bck_mem";
-		};
-
-		wdog_cpuctx_mem: wdog_cpuctx_region {
-			no-map;
-			reg = <0x0 WDOG_CPUCTX_BASE_8937
-				0x0 WDOG_CPUCTX_SIZE_8937>;
-			label = "wdog_cpuctx_mem";
 		};
 	};
 
@@ -466,17 +454,6 @@
 
 		linux,contiguous-region = <&ramoops_mem>;
 	};
-
-	wdog: qcom,wdt@b017000 {
-		qcom,bark-time = <22000>;
-		linux,contiguous-region = <&wdog_cpuctx_mem>;
-	};
-
-	qcom_tzlog: tz-log@08600720 {
-		status = "okay";
-		linux,contiguous-region = <&tzlog_bck_mem>;
-	};
-
 };
 
 &blsp1_uart2 {
